# darwin-connect

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  cli.py  listen.py  listen_kafka.py  pyproject.toml  test_kafka_group.py
api/: pyproject.toml
api/api/api/: settings.py  urls.py
api/api/trainapi/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
api/api/trainapi/migrations/: 0001_initial.py  0002_alter_location_service_update_and_more.py  0003_rename_trainapi_lo_time_c26bca_idx_locations_time_99626f_idx_and_more.py
clients/: pyproject.toml
clients/clients/: __init__.py  kafka.py  stomp.py
clients/src/: stomp.py
clients/test/: test_stomp.py
clients/tests/: test_kafka_messages.py  test_stomp.py
database/: db.sql  docker-compose.yaml  pyproject.toml
database/src/: repo.py
database/test/: test_repo.py
example/: cli.py  parser.py  pyproject.toml  writer.py
example/tests/: test_parser.py
models/: .pre-commit-config.yaml  pyproject.toml
models/models/: common.py  lo.py  schedule.py  ts.py
models/src/: common.py  schedule.py  ts.py
models/test/: test_common.py  test_schedule.py  test_ts.py
models/test/fixtures/sc/: darwin_1.json  darwin_1_schedule.json
models/test/fixtures/ts/: ts_full.json
models/tests/: test_common.py  test_lo.py  test_schedule.py  test_ts.py
models/tests/fixtures/lo/: lo_full.json
models/tests/fixtures/sc/: darwin_cancel_w_loading.json
models/tests/fixtures/ts/: ts_1.json  ts_full.json
sqs/: pyproject.toml
sqs/sqs/: writer.py
sqs/src/: writer.py
sqs/test/: test_writer.py
sqs/tests/: test_writer.py
src/: cli.py  parser.py  repo.py  writer.py
test/: test_parser.py  test_repo.py
