[tool.poetry]
name = "darwin-connect"
version = "0.1.0"
description = ""
authors = ["Robbie Anderson <ra12g14@gmail.com>"]
readme = "README.md"
packages = [ {include = "cli.py"} ]

[tool.poetry.dependencies]
python = "^3.11"
clients = {path = "clients", develop = true}
models = {path = "models", develop = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
