[tool.poetry]
name = "darwin-connect"
version = "0.1.0"
description = ""
authors = ["Robbie Anderson <ra12g14@gmail.com>"]
readme = "README.md"
packages = [ {include = "cli.py"} ]

[tool.poetry.dependencies]
python = "^3.11"
clients = {path = "clients", develop = true}
models = {path = "models", develop = true}
isort = "^5.13.2"
black = "^24.4.2"

[tool.black]
line-length = 79
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 79

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
