[tool.poetry]
name = "models"
version = "0.1.0"
description = ""
authors = ["Robbie Anderson <ra12g14@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.2.2"
pre-commit = "^3.7.1"
black = "^24.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
